2005-04-28  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Remove gnomoku, which has no development
	related changes for almost 3 yrs.

2005-04-26  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: dasher branched for gnome-2-10.

2005-04-26  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: gnopernicus branched for gnome-2-10.

2005-04-22  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: Change gossip to use the HEAD
	  branch.

2005-04-17  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: libgnomeui has been branched.

2005-04-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched.

2005-04-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-screensaver.

2005-04-13  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: Added fast-user-switching-applet.

2005-04-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gyrus.

2005-04-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed system-tools-backends.
	This module has been moved to freedesktop.org.

2005-04-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk has been branched.

2005-04-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added beagle.

2005-04-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: sound-juicer has been branched.

2005-04-04  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: gnome-doc-utils has branched.

2005-04-01  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Remove gnome-chess (no development
	activity for 2 years, last release is 4 yrs ago)

2005-03-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added bakery.

2005-03-29  Frank Arnold  <farnold@cvs.gnome.org>

	* translation-status.xml: gtkhtml HEAD uses "gtkhtml-3.8.pot" now.
