@@ -584,17 +584,6 @@
       </component>
     </version>
   </module>
-  <module name="gaby">
-    <version release="HEAD">
-      <component name="gaby" dir="gaby" group="extras">
-        <podir dir="po"/>
-        <potname name="gaby.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
   <module name="gail">
     <version release="gnome-2.10">
       <component name="gail" dir="gail" group="developer-libs">
@@ -660,17 +649,6 @@
       <component name="gcalctool" dir="gcalctool" group="desktop">
         <podir dir="po"/>
         <potname name="gcalctool.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
-  <module name="gcm">
-    <version release="HEAD">
-      <component name="gcm" dir="gcm" group="extras">
-        <podir dir="po"/>
-        <potname name="gcm.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
@@ -1022,17 +1000,6 @@
       <component name="gnome-backgrounds" dir="gnome-backgrounds" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-backgrounds.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
-  <module name="gnome-backup">
-    <version release="HEAD">
-      <component name="gnome-backup" dir="gnome-backup" group="extras">
-        <podir dir="po"/>
-        <potname name="gnome-backup.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
@@ -1964,17 +1931,6 @@
       <component name="gtranslator" dir="gtranslator" group="extras">
         <podir dir="po"/>
         <potname name="gtranslator.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
-  <module name="gturing">
-    <version release="HEAD">
-      <component name="gturing" dir="gturing" group="extras">
-        <podir dir="po"/>
-        <potname name="gturing-2.0.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
