@@ -1,3 +1,11 @@
+2005-04-29  Abel Cheung  <maddog@linuxhall.org>
+
+	* translation-status.xml: Removed following quasi-dead modules:
+	- gnome-backup: development effort is located somewhere else
+	- gaby: no development change for 3 full years
+	- gcm: declared stop of development by author
+	- gturing: no development change for 2.5 years
+
 2005-04-28  Abel Cheung  <maddog@linuxhall.org>
 
 	* translation-status.xml: Remove gnomoku, which has no development
